--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,29 @@
-# Compiled class file
+### IntelliJ IDEA ###
+.idea/
+*.iml
+
+### Gradle ###
+.gradle/
+build/
+
+# Manter wrapper do Gradle
+!gradle/wrapper/gradle-wrapper.jar
+
+### Java ###
 *.class
+out/
+bin/
 
-# Log file
+### Logs / temp ###
 *.log
+*.tmp
+*.swp
+*.swo
 
-# BlueJ files
-*.ctxt
+### OS ###
+.DS_Store
+Thumbs.db
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+### Opcional - se data for runtime/local ###
+# data/*
+# !data/.gitkeep
